FIX Right aligned numbers in tables. text-align: right; Removed suprious files

--- a/app/assets/stylesheets/elements.css.scss
+++ b/app/assets/stylesheets/elements.css.scss
@@ -46,3 +46,8 @@ table tbody tr:hover td
 {
   color: #009;
 }
+
+table .alnright
+{
+  text-align: right;
+}
